--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "immer": "^4.0.0",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.1",
@@ -19,6 +21,8 @@
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.0",
     "reactotron-react-native": "^4.0.2",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.1.1",
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
