--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "immer": "^4.0.0",
+    "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.1",
@@ -20,7 +21,10 @@
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.0",
+    "react-redux": "^7.1.1",
     "reactotron-react-native": "^4.0.2",
+    "reactotron-redux": "^3.1.2",
+    "reactotron-redux-saga": "^4.2.2",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1",
     "styled-components": "^4.4.0"
